[package]
name = "programming_contest_rust"
version = "0.1.0"
authors = ["Katsuya Kikuchi <k.kikuchi.ah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = {version = "0.4.1", features = ["derive"] }
rand = "0.3.0"
ordered-float = "2.0.0"
clippy = "0.0.302"

[[bin]]
name = "a"
path = "src/VirtualContest/20210304/a.rs"
[[bin]]
name = "b"
path = "src/VirtualContest/20210304/b.rs"
[[bin]]
name = "c"
path = "src/VirtualContest/20210304/c.rs"
[[bin]]
name = "d"
path = "src/VirtualContest/20210304/d.rs"
[[bin]]
name = "e"
path = "src/VirtualContest/20210304/e.rs"
[[bin]]
name = "f"
path = "src/VirtualContest/20210304/f.rs"
[[bin]]
name = "marason"
path = "src/AtCoder Heuristic Contest/AHC001/a.rs"