[package]
name = "programming_contest_rust"
version = "0.1.0"
authors = ["Katsuya Kikuchi <k.kikuchi.ah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = {version = "0.4.1", features = ["derive"] }
rand = "0.3.0"
ordered-float = "2.0.0"
clippy = "0.0.302"

[[bin]]
name = "a"
path = "src/AtCoder Heuristic Contest/AHC002/a.rs"
